# vscode-vcpkg-template

./: CMakeLists.txt  README.md  start.sh
src/: main.cpp
